--- a/Moja_Biblioteczka_JavaFX/src/main/resources/fxml/BorderPaneMain.fxml
+++ b/Moja_Biblioteczka_JavaFX/src/main/resources/fxml/BorderPaneMain.fxml
@@ -1,11 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.CheckMenuItem?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.RadioMenuItem?>
+<?import javafx.scene.control.SeparatorMenuItem?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
 <BorderPane fx:id="borderPane" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.MainController">
    <top>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+         <MenuBar>
+           <menus>
+             <Menu mnemonicParsing="false" text="%file">
+               <items>
+                 <MenuItem mnemonicParsing="false" onAction="#closeAplication" text="%close" />
+               </items>
+             </Menu>
+             <Menu mnemonicParsing="false" text="%edit">
+                  <items>
+                     <RadioMenuItem mnemonicParsing="false" onAction="#setCaspian" text="%caspian">
+                        <toggleGroup>
+                           <ToggleGroup fx:id="styleGroup" />
+                        </toggleGroup>
+                     </RadioMenuItem>
+                     <RadioMenuItem mnemonicParsing="false" onAction="#setModena" selected="true" text="%modena" toggleGroup="$styleGroup" />
+                     <SeparatorMenuItem mnemonicParsing="false" />
+                     <CheckMenuItem mnemonicParsing="false" onAction="#setAlwaysOnTop" text="%alwaysOnTop" />
+                  </items>
+             </Menu>
+             <Menu mnemonicParsing="false" text="%help">
+               <items>
+                 <MenuItem mnemonicParsing="false" onAction="#about" text="%about" />
+               </items>
+             </Menu>
+           </menus>
+         </MenuBar>
       	<fx:include fx:id="topMenuButtons" source="TopMenuButtons.fxml" />
       
       </VBox> 
