--- a/Moja_Biblioteczka_JavaFX/src/main/resources/fxml/BorderPaneMain.fxml
+++ b/Moja_Biblioteczka_JavaFX/src/main/resources/fxml/BorderPaneMain.fxml
@@ -10,7 +10,8 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="borderPane" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.MainController">
+<BorderPane fx:id="borderPane" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" 
+		xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.MainController">
    <top>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <MenuBar>
