--- a/Moja_Biblioteczka_JavaFX/src/main/resources/fxml/TopMenuButtons.fxml
+++ b/Moja_Biblioteczka_JavaFX/src/main/resources/fxml/TopMenuButtons.fxml
@@ -8,7 +8,8 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" spacing="10.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.TopMenuButtonsController">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" spacing="10.0" 
+		xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.TopMenuButtonsController">
    <children>
       <ToggleButton mnemonicParsing="false" onAction="#openLibrary" prefHeight="50.0" prefWidth="150.0" text="%library">
          <toggleGroup>
